tests/snapshot/error/source_locations/statement/with/push_with_scope_throws.exp
TypeError: null has no properties
  ┌ source_locations/statement/with/push_with_scope_throws.js:2:1
  |
2 | with (null) {}
  | ^
Stack trace:
  at <global> (source_locations/statement/with/push_with_scope_throws.js:2:1)